# DataValidation-BrazilianE-Commerce

./: .pre-commit-config.yaml  404.html  README.md  app.py  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  teste_validators.py
arquitetura/: index.html
data/transformados/: olist_orders_invalidos.csv
docs/: arquitetura.md  index.md  instalacao.md  kpis.md  padronizacao.md  resultados.md
etl/: extract.py  transform.py  validate.py
instalacao/: index.html
kpis/: index.html
padronizacao/: index.html
profiling/: order_items.html  orders.html  output_customers.html
relatorios/: atraso_medio_dias.sql  atraso_medio_em_dias.sql  atraso_medio_estado.sql  atraso_medio_por_estado.sql  entregas_no_prazo_donut.sql  frete_medio_estado.sql  mapa_percentual_atrasos.sql  percentual_entrega_prazo.sql  percentual_pedidos_estado.sql  porcentagem_de_pedidos_por_estado.sql  tempo_medio_de_entrega.sql  tempo_medio_entrega.sql  top5_estados_atraso.sql
relatorios/postgres_querys/: atraso_medio_dias.sql  percentual_entrega_prazo.sql  tempo_medio_entrega.sql  top5_estados_atraso.sql
resultados/: index.html
search/: search_index.json
src/: extract.py  transform.py  validate.py
src/decorators/: log_extraction.py  logging_utils.py
src/transform/: __init__.py  customers.py  order_items.py  orders.py
tests/: test_customers.py  test_extract.py  test_order_items.py  test_orders.py
utils/: conexao.py  queries.py
