[tool.poetry]
name = "datavalidation-braziliane-commerce"
version = "0.1.0"
description = ""
authors = ["Iasmim Horrana <horranaiasmim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.24.0"
pandas = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
