[tool.poetry]
name = "datavalidation-braziliane-commerce"
version = "0.1.0"
description = ""
authors = ["Iasmim Horrana <horranaiasmim@gmail.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.24.0"
pandas = "^2.3.0"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
pydantic = "^2.11.7"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.41"
python-dotenv = "^1.1.1"
loguru = "^0.7.3"
streamlit = "^1.47.0"
plotly-express = "^0.4.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
